--- a/todo/templates/todo/todo_completed_delete.html
+++ b/todo/templates/todo/todo_completed_delete.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
-
+</body>
 {% block content %}
-  <h1>Delete Completed Task</h1>
-  <p>Are you sure you want to delete the following completed task?</p>
-  <p>Title: {{ todo.title }}</p>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Delete</button>
-    <button type="button" id="cancelButton">Cancel</button>
-  </form>
 
-  <script>
-    document.getElementById("cancelButton").addEventListener("click", function() {
-      window.location.href = "{% url 'todo:todo_list' %}";
-    });
-  </script>
+  <div class="container bg-dark text-light py-4">
+    <h2>Delete Task</h2>
+    <p>Are you sure you want to delete this task?</p>
+    <form method="POST" action="{% url 'todo:todo_delete' pk=todo.pk %}">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-danger">Delete</button>
+      <a href="{% url 'todo:todo_list' %}" class="btn btn-secondary">Cancel</a>
+    </form>
+  </div>
+
 {% endblock %}
+</body>
