--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -1,121 +1,108 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<div class="container">
-  <h2>Todo List</h2>
-  <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
-    {% csrf_token %}
-    <div class="form-row">
-      <div class="col-md-4 mb-3">
-        <input type="text" class="form-control" name="title" id="taskTitleInput" placeholder="Enter task title" required>
-      </div>
-      <div class="col-md-6 mb-3">
-        <input type="text" class="form-control" name="description" id="descriptionInput" placeholder="Enter task description (optinal)">
-      </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-primary">Add Task</button>
-      </div>
-    </div>
-  </form>
-
-  <ul id="taskList" class="list-group">
-    {% for todo in uncompleted_todos %}
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-md-8">
-          {{ todo.title }}
+  <div class="container bg-dark text-light py-4">
+    <h2>Todo List</h2>
+    <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
+      {% csrf_token %}
+      <div class="form-row">
+        <div class="col-md-4 mb-3">
+          <input type="text" class="form-control" name="title" id="taskTitleInput" placeholder="Enter task title" required>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6 mb-3">
+          <input type="text" class="form-control" name="description" id="descriptionInput" placeholder="Enter task description (optional)">
+        </div>
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-primary">Add Task</button>
+        </div>
+      </div>
+    </form>
+
+    <ul id="taskList" class="list-group">
+      {% for todo in uncompleted_todos %}
+      <li class="list-group-item bg-dark text-light">
+        <div class="row">
+          <div class="col-md-8">
+            {{ todo.title }}
+          </div>
+          <div class="col-md-4">
+            <div class="btn-group float-right">
+              <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
+              <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+              <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
+              <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+
+    {% for completed_by, todos in completed_todos.items %}
+    <div class="mt-4">
+      <h5>Completed by: {{ completed_by }}</h5>
+      <ul class="list-group">
+        {% for todo in todos %}
+        <li class="list-group-item bg-dark text-light">
+          {{ todo.title }}
           <div class="btn-group float-right">
             <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-            <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-            <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
-            <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
+            <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+            <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
           </div>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endfor %}
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="completeModal" tabindex="-1" role="dialog" aria-labelledby="completeModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="completeModalLabel">Complete Task</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
-
-  {% for completed_by, todos in completed_todos.items %}
-  <div class="mt-4">
-    <h5>Completed by: {{ completed_by }}</h5>
-    <ul class="list-group">
-      {% for todo in todos %}
-      <li class="list-group-item">
-      <!-- CRUD for completed tasks -->
-      {{ todo.title }}
-      <div class="btn-group float-right">
-        <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-        <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-        <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a> 
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
-{% endfor %}
-</div>
-
-<div class="modal fade" id="completeModal" tabindex="-1" role="dialog" aria-labelledby="completeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="completeModalLabel">Complete Task</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form id="completeForm">
-          {% csrf_token %}
-          <input type="hidden" id="taskIdInput">
-          <div class="form-group">
-            <label for="nameInput">Your Name:</label>
-            <input type="text" class="form-control" id="nameInput" required>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" id="completeTaskBtn">Submit</button>
+        <div class="modal-body">
+          <p>Are you sure you want to mark this task as complete?</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button id="completeTaskBtn" type="button" class="btn btn-success">Complete</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-  
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-  $(document).ready(function() {
-    $('.complete-btn').click(function() {
-      var taskId = $(this).data('task-id');
-      $('#taskIdInput').val(taskId);
-    });
+  <script>
+    $(document).ready(function() {
+      var taskId = null;
 
-    $('#completeTaskBtn').click(function() {
-      var taskId = $('#taskIdInput').val();
-      var name = $('#nameInput').val();
+      $('.complete-btn').click(function() {
+        taskId = $(this).data('task-id');
+      });
 
-      // Make an AJAX request to complete the task
-      $.ajax({
-        type: 'POST',
-        url: '{% url "todo:todo_complete" pk=0 %}'.replace('0', taskId),
-        data: {
-          csrfmiddlewaretoken: '{{ csrf_token }}',
-          completed_by: name
-        },
-        success: function(response) {
-          window.location.reload();
+      $('#completeTaskBtn').click(function() {
+        if (taskId !== null) {
+          var form = $('<form>', {
+            'method': 'POST',
+            'action': '/todo/' + taskId + '/complete'
+          });
+
+          $('<input>').attr({
+            'type': 'hidden',
+            'name': 'csrfmiddlewaretoken',
+            'value': '{{ csrf_token }}'
+          }).appendTo(form);
+
+          form.appendTo('body').submit();
         }
       });
     });
-  });
-</script>
+  </script>
 {% endblock %}
-
-
 
