--- a/accountapp/templates/accountapp/register.html
+++ b/accountapp/templates/accountapp/register.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Register</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
+<div class="container bg-dark text-light py-4">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h2 class="text-center">Register</h2>
+        <form method="post" class="my-4">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit" class="btn btn-primary btn-block">Register</button>
+        </form>
+        <p class="text-center">Already have an account? <a href="{% url 'accountapp:login' %}" class="btn btn-link text-light">Login</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
