--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -1,108 +1,116 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="container bg-dark text-light py-4">
-    <h2>Todo List</h2>
-    <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
-      {% csrf_token %}
-      <div class="form-row">
-        <div class="col-md-4 mb-3">
-          <input type="text" class="form-control" name="title" id="taskTitleInput" placeholder="Enter task title" required>
+<div class="container bg-dark text-light py-4">
+<h2>Todo List</h2>
+<div class="container">
+  <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
+    {% csrf_token %}
+    <div class="form-row">
+      <div class="col-md-4 mb-3">
+        <input type="text" class="form-control text-dark"  name="title" id="taskTitleInput" placeholder="Enter task title" required>
+      </div>
+      <div class="col-md-6 mb-3">
+        <input type="text" class="form-control text-dark"  name="description" id="descriptionInput" placeholder="Enter task description">
+      </div>
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-primary">Add Task</button>
+      </div>
+    </div>
+  </form>
+
+  <ul id="taskList" class="list-group">
+    {% for todo in uncompleted_todos %}
+    <li class="list-group-item text-dark">
+      <div class="row">
+        <div class="col-md-8">
+          {{ todo.title }}
         </div>
-        <div class="col-md-6 mb-3">
-          <input type="text" class="form-control" name="description" id="descriptionInput" placeholder="Enter task description (optional)">
-        </div>
-        <div class="col-md-2">
-          <button type="submit" class="btn btn-primary">Add Task</button>
+        <div class="col-md-4">
+          <div class="btn-group float-right">
+            <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
+            <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+            <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
+            <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
+          </div>
         </div>
       </div>
-    </form>
+    </li>
+    {% endfor %}
+  </ul>
 
-    <ul id="taskList" class="list-group">
-      {% for todo in uncompleted_todos %}
-      <li class="list-group-item bg-dark text-light">
-        <div class="row">
-          <div class="col-md-8">
-            {{ todo.title }}
-          </div>
-          <div class="col-md-4">
-            <div class="btn-group float-right">
-              <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-              <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-              <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
-              <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
-            </div>
-          </div>
+  {% for completed_by, todos in completed_todos.items %}
+  <div class="mt-4">
+    <h5>Completed by: {{ completed_by }}</h5>
+    <ul class="list-group">
+      {% for todo in todos %}
+      <li class="list-group-item text-dark">
+        {{ todo.title }}
+        <div class="btn-group float-right">
+          <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
+          <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+          <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
         </div>
       </li>
       {% endfor %}
     </ul>
-
-    {% for completed_by, todos in completed_todos.items %}
-    <div class="mt-4">
-      <h5>Completed by: {{ completed_by }}</h5>
-      <ul class="list-group">
-        {% for todo in todos %}
-        <li class="list-group-item bg-dark text-light">
-          {{ todo.title }}
-          <div class="btn-group float-right">
-            <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-            <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-            <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
-          </div>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endfor %}
   </div>
+  {% endfor %}
+</div>
+</div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="completeModal" tabindex="-1" role="dialog" aria-labelledby="completeModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="completeModalLabel">Complete Task</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>Are you sure you want to mark this task as complete?</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button id="completeTaskBtn" type="button" class="btn btn-success">Complete</button>
-        </div>
+<div class="modal fade" id="completeModal" tabindex="-1" role="dialog" aria-labelledby="completeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="completeModalLabel">Complete Task</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form id="completeForm">
+          {% csrf_token %}
+          <input type="hidden" id="taskIdInput">
+          <div class="form-group">
+            <label for="nameInput">Your Name:</label>
+            <input type="text" class="form-control" id="nameInput" required>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="completeTaskBtn">Submit</button>
       </div>
     </div>
   </div>
+</div>
 
-  <script>
-    $(document).ready(function() {
-      var taskId = null;
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $('.complete-btn').click(function() {
+      var taskId = $(this).data('task-id');
+      $('#taskIdInput').val(taskId);
+    });
 
-      $('.complete-btn').click(function() {
-        taskId = $(this).data('task-id');
-      });
+    $('#completeTaskBtn').click(function() {
+      var taskId = $('#taskIdInput').val();
+      var name = $('#nameInput').val();
 
-      $('#completeTaskBtn').click(function() {
-        if (taskId !== null) {
-          var form = $('<form>', {
-            'method': 'POST',
-            'action': '/todo/' + taskId + '/complete'
-          });
-
-          $('<input>').attr({
-            'type': 'hidden',
-            'name': 'csrfmiddlewaretoken',
-            'value': '{{ csrf_token }}'
-          }).appendTo(form);
-
-          form.appendTo('body').submit();
+      // Make an AJAX request to complete the task
+      $.ajax({
+        type: 'POST',
+        url: '{% url "todo:todo_complete" pk=0 %}'.replace('0', taskId),
+        data: {
+          csrfmiddlewaretoken: '{{ csrf_token }}',
+          completed_by: name
+        },
+        success: function(response) {
+          window.location.reload();
         }
       });
     });
-  </script>
+  });
+</script> 
 {% endblock %}
-
