Change the link to the css file. And added a text in the discription input.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -11,7 +11,7 @@
         <input type="text" class="form-control text-dark"  name="title" id="taskTitleInput" placeholder="Enter task title" required>
       </div>
       <div class="col-md-6 mb-3">
-        <input type="text" class="form-control text-dark"  name="description" id="descriptionInput" placeholder="Enter task description">
+        <input type="text" class="form-control text-dark"  name="description" id="descriptionInput" placeholder="Enter task description (optional)">
       </div>
       <div class="col-md-2">
         <button type="submit" class="btn btn-primary">Add Task</button>
