--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -4,8 +4,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <title>The King Of Chores</title>
 </head>
