--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -11,7 +11,7 @@
 <body class="dark-theme">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'todo:todo_list' %}">The King Of Chores</a>
+      <a class="navbar-brand" href="{% url 'todo:home' %}">The King Of Chores</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,7 +46,7 @@
 
   <footer class="footer bg-dark">
     <div class="container">
-      <a class="footer-logo text-light" href="{% url 'todo:todo_list' %}">The King Of Chores</a>
+      <a class="footer-logo text-light" href="{% url 'todo:home' %}">The King Of Chores</a>
       <span class="text-light">Contact: thekingofchores@gmail.com | +46 234 567 890</span> 
     </div> 
   </footer>
