--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,16 @@ body {
 }
 
 
+.navbar-brand {
+    font-family: 'Kristi', cursive;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none; 
+    margin-right: 10px;
+    
+}
+
+
 
 .container { 
     max-width: 500px; 
@@ -25,13 +35,16 @@ body {
 }
 
 
-
-
 h1 {
+    font-family: 'Open Sans', sans-serif;
     font-size: 24px;
     margin-bottom: 20px;
 }
 
+
+h2, h3, p {
+    font-family: 'Open Sans', sans-serif;
+}
   
 
 form {
@@ -54,12 +67,19 @@ button {
     bottom: 0;
     width: 100%;
   }
-  .footer-logo {
+
+
+  .footer-logo  {
+    font-family: 'Kristi', cursive;
     font-size: 20px;
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
   }
+  
+
+  
+
   .footer span {
     color: #fff;
   }
