--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -9,6 +9,10 @@
  
   <title>The King Of Chores</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kristi&family=Open+Sans&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
@@ -17,7 +21,8 @@
 <body class="dark-theme">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'todo:home' %}">The King Of Chores</a>
+      
+      <a class="navbar-brand text-light logo" href="{% url 'todo:home' %}">The King Of Chores</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,8 +57,9 @@
 
   <footer class="footer bg-dark">
     <div class="container">
-      <a class="footer-logo text-light" href="{% url 'todo:home' %}">The King Of Chores</a>
-      <span class="text-light">Contact: thekingofchores@gmail.com | +46 234 567 890</span> 
+      <a class="footer-logo text-light logo" href="{% url 'todo:home' %}">The King Of Chores</a>
+    
+      <span class="text-light"> Contact: thekingofchores@gmail.com | +46 234 567 890 </span> 
     </div> 
   </footer>
    
