--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -5,13 +5,21 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <h2 class="text-center">Login</h2>
+        <h2>Login</h2>
         <form method="post" class="my-4">
           {% csrf_token %}
-          {{ form.as_p }}
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          <!-- {{ form.as_p }} -->
+          <div class="form-group">
+            <label for="username">Username:</label>
+            {{ form.username }}
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            {{ form.password }}
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
         </form>
-        <p class="text-center">Don't have an account?<a href="{% url 'accountapp:register' %}" class="btn btn-link text-light">Register</a></p>
+        <p>Don't have an account? <a href="{% url 'accountapp:register' %}" class="btn btn-link text-light">Register</a></p>
       </div>
     </div>
   </div>
