--- a/accountapp/templates/accountapp/register.html
+++ b/accountapp/templates/accountapp/register.html
@@ -5,15 +5,27 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <h2 class="text-center">Register</h2>
+        <h2>Register</h2>
         <form method="post" class="my-4">
           {% csrf_token %}
-          {{ form.as_p }}
-          <button type="submit" class="btn btn-primary btn-block">Register</button>
+          <div class="form-group">
+            <label for="username">Username:</label>
+            {{ form.username }}
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            {{ form.password1 }}
+          </div>
+          <div class="form-group">
+            <label for="password">Confirm Password:</label>
+            {{ form.password2 }}
+          </div>
+          <button type="submit" class="btn btn-primary">Register</button>
         </form>
-        <p class="text-center">Already have an account? <a href="{% url 'accountapp:login' %}" class="btn btn-link text-light">Login</a></p>
+        <p>Already have an account? <a href="{% url 'accountapp:login' %}" class="btn btn-link text-light">Login</a></p>
       </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
