--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,14 +48,20 @@ h2, h3, p {
   
 
 form {
-      margin-top: 20px;
+    margin-top: 20px;
       
 }
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+  }
   
 button {
     margin-right: 10px;
     
 }
+
 
 
 .footer {
