--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -3,13 +3,32 @@
 {% block content %}
 <div class="container bg-dark text-light py-4">
   <div class="container">
-    <h1>Update Task</h1>
-    <form method="post" action="{% url 'todo:todo_completed_update' pk=completed_todo.pk %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to update this task?')">Update</button>
-      <button type="button" class="btn btn-secondary" id="cancelButton">Back</button>
-    </form>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h1>Update Task</h1>
+        <form method="post" action="{% url 'todo:todo_update' pk=completed_todo.pk %}">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="id_task">Title:</label>
+            {{ form.title }}
+          </div>
+          <div class="form-group">
+            <label for="id_completed">Completed:</label>
+            {{ form.completed }}
+          </div>
+          <div class="form-group">
+            <label for="id_completed_by">Completed by:</label>
+            {{ form.completed_by }}
+          </div>
+          <div class="form-group">
+            <label for="id_description">Description:</label>
+            {{ form.description }}
+          </div>
+          <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to update this task?')">Update</button>
+          <button type="button" class="btn btn-secondary" id="cancelButton">Back</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 <script>
