Added a icon up arrow in the footer.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -112,5 +112,9 @@
       });
     });
   });
+  $('.scroll-to-top').click(function(e) {
+      e.preventDefault();
+      $('html, body').animate({ scrollTop: 0 }, 'slow');
+    });
 </script> 
 {% endblock %}
