--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -2,16 +2,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8mTVTDu4u9pPg2m0h9XWGJ6h8f+12vlE5f8Xv2+3/BzV2OwUSm/OBhF+9rXn9mdz" crossorigin="anonymous">
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
- 
+  
   <title>The King Of Chores</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kristi&family=Open+Sans&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f1f2235153.js" crossorigin="anonymous"></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
@@ -55,14 +58,22 @@
     </div>
   </div>
 
+
   <footer class="footer bg-dark">
     <div class="container">
       <a class="footer-logo text-light logo" href="{% url 'todo:home' %}">The King Of Chores</a>
     
-      <span class="text-light"> Contact: thekingofchores@gmail.com | +46 234 567 890 </span> 
+      <span class="text-light"> Contact: tkoc@gmail.com | +46 234 567 890 </span>
+    
+    </div> 
+    <div>
+      <a href="#" id="scroll-to-top">
+        <i class="fas fa-arrow-up" title="Go to top"></i>
+      </a>
     </div> 
   </footer>
-   
+  
+  
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
