Cleaned and commented the code in the entire project.

--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} <!-- Extend the 'base.html' template -->
 
-{% block content %}
+{% block content %} <!-- Start the content section fore the login page -->
+
 <div class="container bg-dark text-light py-4">
   <div class="container">
     <div class="row justify-content-center">
@@ -27,6 +28,6 @@
     </div>
   </div>
 </div>
-{% endblock %}
+{% endblock %} <!-- End of the content section -->
 
 
