--- a/accountapp/templates/accountapp/register.html
+++ b/accountapp/templates/accountapp/register.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} <!-- Extend the 'base.html' template -->
 
-{% block content %}
+{% block content %} <!-- Start the content section fore the register page -->
+
 <div class="container bg-dark text-light py-4">
   <div class="container">
     <div class="row justify-content-center">
@@ -33,4 +34,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %} <!-- End of the content section -->
