--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -1,30 +1,41 @@
-{% load static %}
+{% load static %}  <!-- Load the static template tag to use static files -->
+
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Link to Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8mTVTDu4u9pPg2m0h9XWGJ6h8f+12vlE5f8Xv2+3/BzV2OwUSm/OBhF+9rXn9mdz" crossorigin="anonymous">
 
+  <!-- Link to jQuery library -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
+  <!-- Link to custom CSS styles -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+  <!-- Link to Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
   <title>The King Of Chores</title>
 
+  <!-- Preconnect and link to Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kristi&family=Open+Sans&display=swap" rel="stylesheet">
+  
+  <!-- Link to Font Awesome JS -->
   <script src="https://kit.fontawesome.com/f1f2235153.js" crossorigin="anonymous"></script>
 
+  <!-- Link to favicon files -->
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}"
+  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
 </head>
+
 <body class="dark-theme">
+  <!-- Navigation bar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      
       <a class="navbar-brand text-light logo" href="{% url 'todo:home' %}">The King Of Chores</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,8 +52,8 @@
           {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'accountapp:login' %}">Login</a>
-              
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'accountapp:register' %}">Register</a>
             </li>
           {% endif %}
@@ -53,11 +64,10 @@
 
   <div class="wrapper">
     <div class="container mt-4">
-      {% block content %}
+      {% block content %}  <!-- Placeholder for content defined in child templates -->
       {% endblock %}
     </div>
   </div>
-
 
   <footer class="footer bg-dark">
     <div class="container">
@@ -73,8 +83,7 @@
     </div> 
   </footer>
   
-  
-  
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
