--- a/todo/templates/todo/todo_completed_update.html
+++ b/todo/templates/todo/todo_completed_update.html
@@ -1,29 +1,31 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}  <!-- Extend the 'base.html' template -->
 
-{% block content %}
+{% block content %}  <!-- Start the content section for update the completed task -->
+
 <div class="container bg-dark text-light py-4">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <h1>Update Task</h1>
         <form method="post" action="{% url 'todo:todo_completed_update' pk=completed_todo.pk %}">
-          {% csrf_token %}
+          {% csrf_token %}  <!-- Include the CSRF token for security -->
           <div class="form-group">
             <label for="id_task">Title:</label>
-            {{ form.title }}
+            {{ form.title }}  <!-- Display the form field for the title -->
           </div>
           <div class="form-group">
             <label for="id_completed">Completed:</label>
-            {{ form.completed }}
+            {{ form.completed }}  <!-- Display the form field for the completed status -->
           </div>
           <div class="form-group">
             <label for="id_completed_by">Completed by:</label>
-            {{ form.completed_by }}
+            {{ form.completed_by }}  <!-- Display the form field for the completed by information -->
           </div>
           <div class="form-group">
             <label for="id_description">Description:</label>
-            {{ form.description }}
+            {{ form.description }}  <!-- Display the form field for the description -->
           </div>
+          <!--Buttons for update and go back to the todolist-->
           <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to update this task?')">Update</button>
           <button type="button" class="btn btn-secondary" id="cancelButton">Back</button>
         </form>
@@ -31,9 +33,12 @@
     </div>
   </div>
 </div>
+
 <script>
+  // JavaScript code to handle the cancel button click
   document.getElementById("cancelButton").addEventListener("click", function() {
-    window.location.href = "{% url 'todo:todo_list' %}";
+    window.location.href = "{% url 'todo:todo_list' %}";  // Redirect to the todo list page
   });
 </script>
-{% endblock %}
+
+{% endblock %}  <!-- End of the content section -->
