--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -1,76 +1,80 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}  <!-- Extend the 'base.html' template -->
 
-{% block content %}
+{% block content %}  <!-- Start the content section for the todolist -->
+
 <div class="container bg-dark text-light py-4">
-<h2>Todo List</h2>
-<div class="container">
-  <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
-    {% csrf_token %}
-    <div class="form-row">
-      <div class="col-md-4 mb-3">
-        <input type="text" class="form-control text-dark"  name="title" id="taskTitleInput" placeholder="Enter task title" required>
-      </div>
-      <div class="col-md-6 mb-3">
-        <input type="text" class="form-control text-dark"  name="description" id="descriptionInput" placeholder="Enter task description (optional)">
-      </div>
-      <div class="col-md-2">
-        <button type="submit" class="btn btn-primary">Add Task</button>
-      </div>
-    </div>
-  </form>
-
-  <ul id="taskList" class="list-group">
-    {% for todo in uncompleted_todos %}
-    <li class="list-group-item text-dark">
-      <div class="row">
-        <div class="col-md-8">
-          {{ todo.title }}
+  <h2>Todo List</h2>
+  <div class="container">
+    <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
+      {% csrf_token %}  <!-- Include the CSRF token for security -->
+      <div class="form-row">
+        <div class="col-md-4 mb-3">
+          <input type="text" class="form-control text-dark" name="title" id="taskTitleInput" placeholder="Enter task title" required>
         </div>
-        <div class="col-md-4">
-          <div class="btn-group float-right">
-            <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-            <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-            <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
-            <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
-          </div>
+        <div class="col-md-6 mb-3">
+          <input type="text" class="form-control text-dark" name="description" id="descriptionInput" placeholder="Enter task description (optional)">
+        </div>
+        <div class="col-md-2">
+          <button type="submit" class="btn btn-primary">Add Task</button> <!-- Add task button for the todolist -->
+
         </div>
       </div>
-    </li>
-    {% endfor %}
-  </ul>
+    </form>
 
-  {% for completed_by, todos in completed_todos.items %}
-  <div class="mt-4">
-    <h5>Completed by: {{ completed_by }}</h5>
-    <ul class="list-group">
-      {% for todo in todos %}
+    <ul id="taskList" class="list-group">
+      {% for todo in uncompleted_todos %}
       <li class="list-group-item text-dark">
-        {{ todo.title }}
-        <div class="btn-group float-right">
-          <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
-          <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
-          <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
+        <div class="row">
+          <div class="col-md-8">
+            {{ todo.title }}
+          </div>
+          <div class="col-md-4">
+            <div class="btn-group float-right">
+              <!-- Buttons for view edit and delete for uncompleted tasks -->
+              <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
+              <a href="{% url 'todo:todo_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+              <a href="{% url 'todo:todo_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
+              <button type="button" class="btn btn-success complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
+            </div>
+          </div>
         </div>
       </li>
       {% endfor %}
     </ul>
-  </div>
-  {% endfor %}
-</div>
-</div>
 
+    {% for completed_by, todos in completed_todos.items %}
+    <div class="mt-4">
+      <h5>Completed by: {{ completed_by }}</h5>
+      <ul class="list-group">
+        {% for todo in todos %}
+        <li class="list-group-item text-dark">
+          {{ todo.title }}
+          <div class="btn-group float-right">
+            <!-- Buttons for view edit and delete for completed tasks -->
+            <a href="{% url 'todo:todo_view' pk=todo.pk %}" class="btn btn-info">View</a>
+            <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}" class="btn btn-warning">Edit</a>
+            <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}" class="btn btn-danger">Delete</a>
+          </div>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+<!--Modal section-->
 <div class="modal fade" id="completeModal" tabindex="-1" role="dialog" aria-labelledby="completeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="completeModalLabel">Complete Task</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <!-- Close button for the modal -->
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <form id="completeForm">
-          {% csrf_token %}
+          {% csrf_token %}  <!-- Include the CSRF token for security -->
           <input type="hidden" id="taskIdInput">
           <div class="form-group">
             <label for="nameInput">Your Name:</label>
@@ -88,12 +92,15 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+  // Document ready function to execute when the page finishes loading
   $(document).ready(function() {
+    // Event handler for clicking the complete button
     $('.complete-btn').click(function() {
       var taskId = $(this).data('task-id');
       $('#taskIdInput').val(taskId);
     });
 
+    // Event handler for clicking the complete task button
     $('#completeTaskBtn').click(function() {
       var taskId = $('#taskIdInput').val();
       var name = $('#nameInput').val();
@@ -107,14 +114,17 @@
           completed_by: name
         },
         success: function(response) {
-          window.location.reload();
+          window.location.reload();  // Reload the page after successful completion
         }
       });
     });
   });
+
+  // Event handler for scrolling to the top of the page
   $('.scroll-to-top').click(function(e) {
-      e.preventDefault();
-      $('html, body').animate({ scrollTop: 0 }, 'slow');
-    });
+    e.preventDefault();
+    $('html, body').animate({ scrollTop: 0 }, 'slow');
+  });
 </script> 
-{% endblock %}
+
+{% endblock %} <!-- End of the content section -->
