Added images and content to the TESTING.md. And cleand big parts of the full project code.

--- a/todo/templates/todo/todo_completed_update.html
+++ b/todo/templates/todo/todo_completed_update.html
@@ -35,7 +35,7 @@
 </div>
 
 <script>
-  // JavaScript code to handle the cancel button click
+  // JavaScript code to handle the back button click
   document.getElementById("cancelButton").addEventListener("click", function() {
     window.location.href = "{% url 'todo:todo_list' %}";  // Redirect to the todo list page
   });
