--- a/todo/templates/todo/todo_delete.html
+++ b/todo/templates/todo/todo_delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}  <!-- Extend the 'base.html' template -->
 
-{% block content %}  <!-- Start the content section for delete taask -->
+{% block content %}  <!-- Start the content section for delete task -->
 
 <div class="container bg-dark text-light py-4">
   <h1 class="text-light">Delete Task</h1>
