--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -35,6 +35,7 @@
   </div>
 </div>
 <script>
+  // JavaScript code to handle the back button click
   document.getElementById("cancelButton").addEventListener("click", function() {
     window.location.href = "{% url 'todo:todo_list' %}";
   });
