Added meta tags for the responsivnes and seo in the base.html.

--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -4,6 +4,20 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+
+  <!-- Specify the compatibility mode for Internet Explorer -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Set the viewport for responsive design -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Provide a description for the webpage -->
+  <meta name="description" content="Create a to-do list for the whole family or for another group of people">
+
+  <!-- Specify keywords related to the webpage content -->
+  <meta name="keywords" content="Simple todolist, todolist family">
+
   <!-- Link to Font Awesome CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-8mTVTDu4u9pPg2m0h9XWGJ6h8f+12vlE5f8Xv2+3/BzV2OwUSm/OBhF+9rXn9mdz" crossorigin="anonymous">
 
