Change the lables in most of the forms

--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -11,12 +11,12 @@
           {% csrf_token %}
           <!-- Render the username field -->
           <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="id_username">Username:</label>
             {{ form.username }}
           </div>
           <!-- Render the password field -->
           <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="id_password">Password:</label>
             {{ form.password }}
           </div>
           <!-- Submit button -->
