--- a/accountapp/templates/accountapp/register.html
+++ b/accountapp/templates/accountapp/register.html
@@ -11,17 +11,17 @@
           {% csrf_token %}
           <!-- Render the username field -->
           <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="id_username">Username:</label>
             {{ form.username }}
           </div>
           <!-- Render the password field -->
           <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="id_password1">Password:</label>
             {{ form.password1 }}
           </div>
           <!-- Render the password confirmation field -->
           <div class="form-group">
-            <label for="password">Confirm Password:</label>
+            <label for="id_password2">Confirm Password:</label>
             {{ form.password2 }}
           </div>
           <!-- Submit button -->
