--- a/todo/templates/todo/todo_completed_update.html
+++ b/todo/templates/todo/todo_completed_update.html
@@ -10,7 +10,7 @@
         <form method="post" action="{% url 'todo:todo_completed_update' pk=completed_todo.pk %}">
           {% csrf_token %}  <!-- Include the CSRF token for security -->
           <div class="form-group">
-            <label for="id_task">Title:</label>
+            <label for="id_title">Title:</label>
             {{ form.title }}  <!-- Display the form field for the title -->
           </div>
           <div class="form-group">
