--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -10,7 +10,7 @@
         <form method="post" action="{% url 'todo:todo_update' pk=completed_todo.pk %}">
           {% csrf_token %}
           <div class="form-group">
-            <label for="id_task">Title:</label>
+            <label for="id_title">Title:</label>
             {{ form.title }} <!-- Input field for the task title -->
           </div>
           <div class="form-group">
