--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -19,7 +19,7 @@
           <button type="submit" class="btn btn-primary">Add Task</button> <!-- Add task button for the todolist -->
 
         </div>
-        <h3>Chores Todo</h3>
+        <h3>Uncompleted Chores</h3>
       </div>
     </form>
 
