Added images and content to the README.md. And fixed some typo and imports in the todo view and the home.html.

--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -3,7 +3,7 @@
 {% block content %}  <!-- Start the content section fore the home page -->
 
 <div class="container bg-dark text-light py-4">
-    <h2>Welcome to The King of Chores!</h2>
+    <h2>Welcome to The King Of Chores!</h2>
     <p>Here you can create a to-do list for the whole family. You can add as many tasks as you want.
         When a task is marked as complete, you enter the name of the person who performed the task for an easier overview of who did what.
         To be able to do this, you need to create an account through a registration.</p>
