Created new forms for validations and messages to the login, register and logout features. And changed all the files needed for it to work. And changed images in the TESTING.md.

--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %} <!-- Extend the 'base.html' template -->
+{% extends 'base.html' %}
 
-{% block content %} <!-- Start the content section fore the login page -->
-
+{% block content %}
 <div class="container bg-dark text-light py-4">
   <div class="container">
     <div class="row justify-content-center">
@@ -19,6 +18,15 @@
             <label for="id_password">Password:</label>
             {{ form.password }}
           </div>
+          <!-- Display error messages -->
+          {% if messages %}
+            <div class="errorlist">
+              {% for message in messages %}
+                {{ message }}
+              {% endfor %}
+            </div>
+          {% endif %}
+          <br>
           <!-- Submit button -->
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
@@ -28,6 +36,4 @@
     </div>
   </div>
 </div>
-{% endblock %} <!-- End of the content section -->
-
-
+{% endblock %}
