--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,11 @@
-/* Set the background image and properties */
+/* Sets styles for all elements */
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+/* Set the background image and properties for the body */
 body {
     background-image: linear-gradient(to bottom, #5aa29a, #40b997, #47cd82, #70de5d, #a8eb12);
     background-size: cover;
@@ -9,7 +16,7 @@ body {
     min-height: 100vh;
 }
 
-/* Styling for the navbar brand */
+/* Styling for the navbar brand link */
 a.navbar-brand {
     font-family: 'Kristi', cursive;
     font-size: 160%;
@@ -33,6 +40,13 @@ a.navbar-brand {
     overflow: hidden;
     padding-bottom: 100px;
     margin-bottom: 35px;
+}
+
+/* Styling for success messages */
+.message.success {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
 }
 
 /* Styling for heading elements */
@@ -79,4 +93,3 @@ button {
     text-decoration: none;
     margin-right: 10px;
 }
-
